fixed alignment of contact info

--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body {
   color: white;
   display: inline-block;
   bottom: 20px;
-  left: 1150px;
+  left: 1200px;
 }
 
 .project1{
